--- a/_includes/header.html
+++ b/_includes/header.html
@@ -83,6 +83,34 @@
             </a>
           </li>
         {%- endif -%}
+        {%- if site.unsplash_username -%}
+          <li>
+            <a target="_blank" href="https://unsplash.com/{{ site.unsplash_username| escape }}" class="button button--sacnite button--round-l">
+              <i class="fas fa-camera-retro" title="Unsplash link"></i>
+            </a>
+          </li>
+        {%- endif -%}
+        <!-- {%- if site.medium_username -%}
+          <li>
+            <a target="_blank" href="https://medium.com/{{ site.medium_username| escape }}" class="button button--sacnite button--round-l">
+              <i class="fab fa-medium" title="Medium link"></i>
+            </a>
+          </li>
+        {%- endif -%}
+        {%- if site.dev_username -%}
+          <li>
+            <a target="_blank" href="https://dev.to/{{ site.dev_username| escape }}" class="button button--sacnite button--round-l">
+              <i class="fab fa-dev" title="Dev link"></i>
+            </a>
+          </li>
+        {%- endif -%}
+        {%- if site.angellist_username -%}
+          <li>
+            <a target="_blank" href="https://angel.co/{{ site.angellist_username| escape }}" class="button button--sacnite button--round-l">
+              <i class="fab fa-angellist" title="Dev link"></i>
+            </a>
+          </li>
+        {%- endif -%} -->
       </ul>
 
       {%- if site.email -%}
