--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,17 +34,10 @@
             </a>
           </li>
         {%- endif -%}
-        {%- if site.stackoverflow_username -%}
+        {%- if site.unsplash_username -%}
           <li>
-            <a target="_blank" href="https://stackoverflow.com/users/{{ site.stackoverflow_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
-              <i class="fab fa-stack-overflow" title="Stackoverflow link"></i>
-            </a>
-          </li>
-        {%- endif -%}
-        {%- if site.instagram_username -%}
-          <li>
-            <a target="_blank" href="https://www.instagram.com/{{ site.instagram_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
-              <i class="fab fa-instagram" title="Instagram link"></i>
+            <a target="_blank" href="https://unsplash.com/{{ site.unsplash_username| escape }}" class="button button--sacnite button--round-l">
+              <i class="fas fa-camera-retro" title="Unsplash link"></i>
             </a>
           </li>
         {%- endif -%}
@@ -90,35 +83,56 @@
             </a>
           </li>
         {%- endif -%}
-        {%- if site.orcid_username -%}
+        {%- if site.medium_username -%}
           <li>
-            <a target="_blank" href="https://orcid.org/{{ site.orcid_username | escape }}" class="button button--sacnite button--round-l">
-              <i class="fab fa-orcid" title="ORCiD link"></i>
+            <a target="_blank" href="https://medium.com/{{ site.medium_username| escape }}" class="button button--sacnite button--round-l">
+              <i class="fab fa-medium" title="Medium link"></i>
             </a>
           </li>
         {%- endif -%}
-        {% for link in site.additional_links %}
+        <!-- {%- if site.unsplash_username -%}
           <li>
-            {% include a.html href=link.url class="button button--sacnite button--round-l" %}
-              <i class="fab {{ link.icon }}" title="{{ link.title | escape }}"></i>
+            <a target="_blank" href="https://unsplash.com/{{ site.unsplash_username| escape }}" class="button button--sacnite button--round-l">
+              <i class="fas fa-camera-retro" title="Unsplash link"></i>
             </a>
           </li>
-        {% endfor %}
+        {%- endif -%}
+        {%- if site.medium_username -%}
+          <li>
+            <a target="_blank" href="https://medium.com/{{ site.medium_username| escape }}" class="button button--sacnite button--round-l">
+              <i class="fab fa-medium" title="Medium link"></i>
+            </a>
+          </li>
+        {%- endif -%}
+        {%- if site.dev_username -%}
+          <li>
+            <a target="_blank" href="https://dev.to/{{ site.dev_username| escape }}" class="button button--sacnite button--round-l">
+              <i class="fab fa-dev" title="Dev link"></i>
+            </a>
+          </li>
+        {%- endif -%}
+        {%- if site.angellist_username -%}
+          <li>
+            <a target="_blank" href="https://angel.co/{{ site.angellist_username| escape }}" class="button button--sacnite button--round-l">
+              <i class="fab fa-angellist" title="Dev link"></i>
+            </a>
+          </li>
+        {%- endif -%} -->
       </ul>
 
       {%- if site.email -%}
         <p>
-          {{ site.email_title | default: "Email" }}: <a href="mailto:{{ site.email }}" target="_blank">{{ site.email | escape }}</a>
+          Email: <a href="mailto:{{ site.email }}" target="_blank">{{ site.email | escape }}</a>
         </p>
       {%- endif -%}
       {%- if site.phone -%}
         <p>
-          {{ site.phone_title | default: "Phone" }}: {{ site.phone | escape }}
+          Phone: {{ site.phone | escape }}
         </p>
       {%- endif -%}
       {%- if site.website -%}
         <p>
-          {{ site.website_title | default: "Web" }}: {% include a.html href=site.website %}{{ site.website | escape }}</a>
+          Web: {% include a.html href=site.website %}{{ site.website | escape }}</a>
         </p>
       {%- endif -%}
     </div>
