--- a/_includes/header.html
+++ b/_includes/header.html
@@ -85,7 +85,7 @@
         {%- endif -%}
         {%- if site.medium_username -%}
           <li>
-            <a target="_blank" href="https://medium.com/{{ site.medium_username| escape }}" class="button button--sacnite button--round-l">
+            <a target="_blank" href="https://medium.com/@{{ site.medium_username| escape }}" class="button button--sacnite button--round-l">
               <i class="fab fa-medium" title="Medium link"></i>
             </a>
           </li>
